--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,8 @@ logging:
             bind: trace
       springframework:
         security: debug
+auth:
+  jwt:
+    issuer: lsw.practice
+    secret: PO4c8z41Hia5gJG3oeuFJMRYBB4Ws4aZ
+    accessTokenExpirationHour: 168
