컨트롤러 테스트 코드 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://aws-0-ap-northeast-2.pooler.supabase.com:5432/postgres
+    username: postgres.dlnlvelkdazwzhaepcxc
+    password: jMFWZpB5NqoyFdSY
   jpa:
     properties:
       hibernate:
